fix: Not scrolling on overflow

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -28,7 +28,6 @@ mat-sidenav-container {
       padding-bottom: $bottom-nav-height;
       padding-left: 5%;
       padding-right: 5%;
-      height: 100%;
       overflow: auto;
     }
     app-bottom-nav {
